Fixed links to each recipe

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <ul>
-    <li><a href="sinigang.html">Sinigang Recipe</a></li>
-    <li><a href="adobo.html">Adobo Recipe</a></li>
-    <li><a href="sisig.html">Mushroom Sisig</a></li>
+    <li><a href="/recipes/adobo.html">Sinigang Recipe</a></li>
+    <li><a href="/recipes/sinigang.html">Adobo Recipe</a></li>
+    <li><a href="/recipes/sisig.html">Mushroom Sisig</a></li>
     </ul>
 </body>
 </html>
